# connect-examples

./: .bazeliskrc  .bazelrc  .gitignore  .gitmodules  .golangci.yaml  BUILD.bazel  Cargo.toml  MODULE.bazel  README.md  buf.gen.go.yaml  buf.gen.python.yaml  buf.gen.rust.yaml  buf.gen.yaml  buf.yaml  go.MODULE.bazel  go.mod  go.sum  pyrightconfig.json  python.MODULE.bazel  renovate.json  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  ruff.toml  rust.MODULE.bazel
.cursor/agent/: POLICY.md  quarantine.md  verify.md
.github/workflows/: agent-gate.yml  agent-maintain.yml  ci.yml  renovate-buf-lock.yml
api/v1/: BUILD.bazel  echo.proto
bazel/: BUILD.bazel  buf.bzl  buf_generate.bzl
go/api/: BUILD.bazel
go/api/v1/: echo.connect.go  echo.pb.go
go/echo/cmd/client/: BUILD.bazel  main.go  retry.go  retry_test.go
go/echo/cmd/server/: BUILD.bazel  log.go  main.go  main_test.go
python/: BUILD.bazel
python/buf/validate/: validate_pb.py
python/echo/: BUILD.bazel  __init__.py
python/echo/client/: BUILD.bazel  __init__.py  __main__.py  retry.py
rust/: build.rs
rust/api/: BUILD.bazel  Cargo.toml
rust/api/src/: lib.rs
rust/client/: Cargo.toml  build.rs
rust/echo/: BUILD.bazel  build.rs
rust/echo/client/: BUILD.bazel  Cargo.toml
rust/echo/client/src/: main.rs  retry.rs
rust/echo/server/: BUILD.bazel  Cargo.toml
rust/echo/server/src/: log.rs  main.rs
rust/server/: Cargo.toml  build.rs
rust/server/src/: log.rs  main.rs
rust/src/: main.rs
