"""
Go toolchain and module dependencies for Bazel (rules_go + gazelle).
"""

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.from_file(go_mod = "//:go.mod")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "build_buf_gen_go_bufbuild_protovalidate_protocolbuffers_go",
    "com_connectrpc_connect",
    "com_connectrpc_grpchealth",
    "com_connectrpc_validate",
    "com_github_bufbuild_buf",
    "com_github_golangci_golangci_lint_v2",
    "com_github_grpc_ecosystem_grpc_health_probe",
    "org_golang_google_protobuf",
    "org_golang_x_net",
    "org_golang_x_vuln",
)
