"""
Python toolchain and pip dependencies for Bazel (rules_python).
"""

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = "3.14",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip",
    python_version = "3.14",
    requirements_lock = "//:requirements.txt",
)
use_repo(pip, "pip")
