load("@bazel_lib//lib:write_source_files.bzl", "write_source_files")
load("//bazel:buf.bzl", "buf_generate", "buf_lint_test")

buf_lint_test(
    name = "lint",
    size = "small",
    srcs = glob(["*.proto"]),
)

buf_generate(
    name = "go",
    srcs = glob(["*.proto"]),
    outdir = "go",
    plugins = [
        "//bazel:protoc-gen-go",
        "//bazel:protoc-gen-connect-go",
    ],
    template = "//:buf.gen.go.yaml",
)

buf_generate(
    name = "python",
    srcs = glob(["*.proto"]),
    include_imports = True,
    outdir = "python/gen",
    template = "//:buf.gen.python.yaml",
)

write_source_files(
    name = "generate",
    check_that_out_file_exists = False,
    files = {
        "//go/api:v1": ":go",
        "//python:gen": ":python",
    },
)
