load("@bazel_lib//lib:write_source_files.bzl", "write_source_files")
load("//bazel:buf.bzl", "buf_generate", "buf_lint_test", "buf_module")

filegroup(
    name = "protos",
    srcs = glob(["*.proto"]),
    visibility = ["//visibility:public"],
)

# Staged buf module shared by generate and lint.
buf_module(
    name = "module",
    srcs = [":protos"],
    visibility = ["//visibility:public"],
)

buf_lint_test(
    name = "lint",
    size = "small",
    module = ":module",
)

buf_generate(
    name = "go",
    module = ":module",
    outdir = "go",
    proto_dir = "api/v1",
    tags = ["manual"],
    template = "//:buf.gen.go.yaml",
)

buf_generate(
    name = "python",
    include_imports = True,
    module = ":module",
    outdir = "python/gen",
    tags = ["manual"],
    template = "//:buf.gen.python.yaml",
)

buf_generate(
    name = "rust",
    full_tree = True,
    module = ":module",
    outdir = "rust/api/gen",
    tags = ["manual"],
    template = "//:buf.gen.rust.yaml",
)

write_source_files(
    name = "generate",
    check_that_out_file_exists = False,
    # Local Python imports create __pycache__ under python/gen; ignore it in the
    # up-to-date check (gitignored, not part of generated output).
    diff_args = [
        "-x",
        "__pycache__",
    ],
    files = {
        "//go/api:v1": ":go",
        "//python:gen": ":python",
        "//rust/api:gen": ":rust",
    },
    # Keep out of bazel build/test //... — apps use checked-in stubs; BSR remotes
    # would otherwise be hit on every CI/local //... (rate limits). Run explicitly:
    #   bazel run //api/v1:generate
    #   bazel test //api/v1:generate_tests
    tags = ["manual"],
)
