[package]
name = "api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
description = "Generated Connect + buffa stubs for api.v1 (from buf.gen.rust.yaml)"

[lib]
path = "src/lib.rs"

[dependencies]
buffa = { workspace = true }
connectrpc = { workspace = true, features = ["client", "server", "json"] }
serde = { workspace = true }
