load("@crates//:defs.bzl", "aliases", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_binary")

rust_binary(
    name = "client",
    srcs = [
        "src/main.rs",
        "src/retry.rs",
    ],
    aliases = aliases(),
    deps = all_crate_deps(
        normal = True,
    ) + ["//rust/api"],
)
