[package]
name = "echo-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
description = "Connect Echo client (connect-rust)"

[[bin]]
name = "echo-client"
path = "src/main.rs"

[dependencies]
api = { workspace = true }
buffa = { workspace = true }
connectrpc = { workspace = true, features = ["client", "json"] }
mimalloc = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
