load("@crates//:defs.bzl", "aliases", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_test")

rust_binary(
    name = "server",
    srcs = [
        "src/log.rs",
        "src/main.rs",
    ],
    aliases = aliases(),
    deps = all_crate_deps(
        normal = True,
    ) + ["//rust/api"],
)

rust_test(
    name = "server_test",
    size = "small",
    crate = ":server",
    deps = all_crate_deps(
        normal = True,
        normal_dev = True,
    ) + ["//rust/api"],
)
