load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "server_lib",
    srcs = [
        "log.go",
        "main.go",
    ],
    importpath = "github.com/amsokol/connect-examples/go/echo/cmd/server",
    visibility = ["//visibility:private"],
    deps = [
        "//go/api:apiv1",
        "@com_connectrpc_connect//:connect",
        "@com_connectrpc_grpchealth//:grpchealth",
        "@com_connectrpc_validate//:validate",
    ],
)

go_binary(
    name = "server",
    embed = [":server_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "server_test",
    size = "small",
    srcs = ["main_test.go"],
    embed = [":server_lib"],
)
